feat: Add user ID to connection events and improve authenticated user logging
- Updated 'userConnected' event to include first 10 chars of token as userId for better identification
- Enhanced server logging to only log connection/disconnection for authenticated users, including domain info
- Modified README.md and index.html to reflect the new event parameters and provide visual feedback (green for connections, red for disconnections)
- Removed generic console logs for unauthenticated connections and cleaned up disconnect logic

This change improves user tracking and debugging by associating events with specific users, while ensuring only valid sessions are logged.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>OpenSockit Test</h1>
     <div id="status">Connecting...</div>
+    <p><strong>Automatic Events:</strong> User connections/disconnections will appear below in green/red.</p>
     <input type="text" id="eventInput" placeholder="Event type" value="message">
     <input type="text" id="messageInput" placeholder="Type a message">
     <button onclick="sendMessage()">Send</button>
@@ -20,7 +21,13 @@
             sockit.getSocket().onAny((event, ...args) => {
                 if (event !== 'token') {
                     const div = document.getElementById('messages');
-                    div.innerHTML += `<p>Received ${event}: ${JSON.stringify(args)}</p>`;
+                    if (event === 'userConnected') {
+                        div.innerHTML += `<p style="color: green;">User ${args[0]} connected!</p>`;
+                    } else if (event === 'userDisconnected') {
+                        div.innerHTML += `<p style="color: red;">A user disconnected.</p>`;
+                    } else {
+                        div.innerHTML += `<p>Received ${event}: ${JSON.stringify(args)}</p>`;
+                    }
                 }
             });
         }).catch((error) => {
