feat: add userId parameter to userDisconnected event
- Updated README.md to document userId in userDisconnected event description
- Modified index.html to display the specific userId in disconnection messages
- Changed server.js to emit userId (first 10 chars of token) with userDisconnected event

This enhances consistency with userConnected event, providing clients with the disconnecting user's identifier for better logging and UI updates.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     if (event === 'userConnected') {
                         div.innerHTML += `<p style="color: green;">User ${args[0]} connected!</p>`;
                     } else if (event === 'userDisconnected') {
-                        div.innerHTML += `<p style="color: red;">A user disconnected.</p>`;
+                        div.innerHTML += `<p style="color: red;">User ${args[0]} disconnected.</p>`;
                     } else {
                         div.innerHTML += `<p>Received ${event}: ${JSON.stringify(args)}</p>`;
                     }
